syntax = "proto3";

package packages.resource;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ResourcesService {
  rpc ListResources(ListResourcesRequest) returns (ResourceResponse);
  rpc CreateResource(CreateResourceRequest) returns (ResourceResponse);
  rpc UpdateResource(UpdateResourceRequest) returns (ResourceResponse);
  rpc DeleteResource(DeleteResourceRequest) returns (google.protobuf.Empty);
  rpc UpdateTaskResourceAllocation(UpdateTaskResourceAllocationRequest) returns (ResourceResponse);
  rpc ListResourceGroups(ListResourceGroupsRequest)
      returns (ResourceGroupResponse);
  rpc CreateResourceGroup(CreateResourceGroupRequest)
      returns (ResourceGroupResponse);
  rpc UpdateResourceGroup(UpdateResourceGroupRequest)
      returns (ResourceGroupResponse);
  rpc DeleteResourceGroup(DeleteResourceGroupRequest)
      returns (google.protobuf.Empty);
}

message Datestamps {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp deleted_at = 3;
}

message Unit {
  uint32 id = 1;
  string name = 2;
}

message ResourceAllocation {
  uint32 quantity = 1;
  uint32 allocated_unit = 2;
  string task_id = 3;
  string notes = 4;
  uint32 resource_id = 5;
  repeated uint32 role_id = 6;
}

message Resource {
  uint32 id = 1;
  string name = 2;
  Unit unit = 3;
  uint32 unit_quantity = 4;
  string project_id = 5;
  uint32 role_id = 6;
  uint32 resource_group_id = 7;
  repeated ResourceAllocation resource_allocation = 8;
  Datestamps datestamps = 9;
}

message ResourcesList {
  repeated Resource data = 1;
}
  
message ErrorResponse {
  uint32 status_code = 1;
  string message = 2;
}

message ResourceResponse {
  oneof response {
    ResourcesList data = 1;
    ErrorResponse error = 2;
  }
}

message ListResourcesRequest {
  oneof resource {
    uint32 id = 1;
    uint32 resource_group_id = 2;
    uint32 project_id = 3;
  }
  repeated uint32 task_id = 4;
  oneof pagination {
    uint32 limit = 5;
    uint32 offset = 6;
  }
}

message CreateResourceRequest {
  oneof resource {
    string name = 1;
    uint32 cost = 2;
    uint32 unit_quantity = 3;
    Unit unit = 4;
    uint32 resource_group_id = 5;
    uint32 project_id = 6;
  }
}

message UpdateResourceRequest {
  uint32 id = 1;
  oneof resource {
    string name = 2;
    uint32 cost = 3;
    uint32 unit_quantity = 4;
    uint32 unit_id = 5;
    uint32 resource_group_id = 6;
  }
}

message DeleteResourceRequest { uint32 id = 1; }

message ResourceGroup {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  uint32 project_id = 4;
  repeated Resource resource = 5;
  Datestamps datestamps = 6;
}

message UpdateTaskResourceAllocationRequest {
  uint32 task_id = 1;
  uint32 resource_id = 2;
  uint32 unit = 3;
  enum Operation {
    ALLOCATE = 0;
    UNALLOCATE = 1;
  }
  Operation operation = 4;
}

message ListResourceGroupsRequest {
  uint32 id = 1;
  uint32 project_id = 2;
}

message CreateResourceGroupRequest {
  string name = 1;
  string description = 2;
  uint32 project_id = 3;
}

message UpdateResourceGroupRequest {
  uint32 id = 1;
  oneof resource {
    string name = 2;
    string description = 3;
  }
}

message DeleteResourceGroupRequest { uint32 id = 1; }

message ResourceGroupsList {
  repeated ResourceGroup data = 1;
}

message ResourceGroupResponse {
    oneof response {
      ResourceGroupsList data = 1;
      ErrorResponse error = 2;
    }
}