syntax = "proto3";

package packages.task;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "resource.proto";

service TasksService {
    rpc ListTasks(ListTasksRequest) returns (TaskResponse);
    rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
    rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse);
    rpc DeleteTask(DeleteTaskRequest) returns (google.protobuf.Empty);
    rpc ListTaskColumns(ListTaskColumnsRequest) returns (TaskColumnResponse);
    rpc CreateTaskColumn(CreateTaskColumnRequest) returns (TaskColumnResponse);
    rpc UpdateTaskColumn(UpdateTaskColumnRequest) returns (TaskColumnResponse);
    rpc DeleteTaskColumn(DeleteTaskColumnRequest) returns (TaskColumnResponse);
    rpc AssignTask(AssignTaskRequest) returns (TaskResponse);
    rpc RemoveAssignee(RemoveAssigneeRequest) returns (google.protobuf.Empty);
}

message Datestamps {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp deleted_at = 3;
}

message FindAllTasksResponse {
    repeated Task tasks = 1;
}

message ListTasksRequest {
    oneof task {
        uint32 id = 1;
        string created_by = 2;
        uint32 project_id = 3;
        uint32 task_column_id = 4;
    }
    oneof pagination {
      uint32 limit = 5;
      uint32 offset = 6;
    }
}

message CreateTaskRequest {
    string name = 2;
    string featured_image = 3;
    string description = 4;
    TaskStatus status = 5;
    TaskPriority priority = 6;
    google.protobuf.Timestamp start_date = 7;
    google.protobuf.Duration duration = 8;
    string predecessor = 9;
    repeated Subtask subtasks = 10;
    uint32 order = 11;
    string created_by = 12;
    repeated string assigned_to = 14;
    optional uint32 issue_id = 15;
    uint32 task_column_id = 16;
    uint32 project_id = 17;
}

message UpdateTaskRequest {
    uint32 id = 1;
    string name = 2;
    string featured_image = 3;
    string description = 4;
    TaskStatus status = 5;
    TaskPriority priority = 6;
    google.protobuf.Timestamp start_date = 7;
    google.protobuf.Duration duration = 8;
    string predecessor = 9;
    repeated Subtask subtasks = 10;
    repeated resource.Resource resources = 11;
    uint32 order = 12;
    repeated string assigned_to = 13;
    optional uint32 issue_id = 14;
    uint32 task_column_id = 15;
    uint32 project_id = 16;
}

message DeleteTaskRequest {
    uint32 id = 1;
}

message Subtask {
    uint32 id = 1;
    string label = 2;
    bool status = 3;
}

message TaskAssignees {
    uint32 id = 1;
    string user_id = 2;
    uint32 task_id = 3;
}

message Task {
    uint32 id = 1;
    string name = 2;
    string featured_image = 3;
    string description = 4;
    TaskStatus status = 5;
    TaskPriority priority = 6;
    google.protobuf.Timestamp start_date = 7;
    google.protobuf.Duration duration = 8;
    string predecessor = 9;
    repeated Subtask subtasks = 10;
    repeated resource.Resource resources = 11;
    uint32 order = 12;
    string created_by = 13;
    repeated string assigned_to = 14;
    optional uint32 issue_id = 15;
    uint32 task_column_id = 16;
    uint32 project_id = 17;
    repeated TaskAssignees task_assignees = 18;
    optional google.protobuf.Timestamp created_at = 19;
    optional google.protobuf.Timestamp updated_at = 20;
    optional google.protobuf.Timestamp deleted_at = 21;
}

message TasksList {
    repeated Task data = 1;
}
  
message ErrorResponse {
    uint32 status_code = 1;
    string message = 2;
}

message TaskResponse {
    oneof response {
        TasksList data = 1;
        ErrorResponse error = 2;
    }
}

message TaskColumn {
    uint32 id = 1;
    string name = 2;
    uint32 limit = 3;
    uint32 order = 4;
    uint32 project_id = 5;
    repeated Task task = 6;
    Datestamps datestamps = 7;
}

message TaskColumnsList {
    repeated TaskColumn data = 1;
}

message TaskColumnResponse {
    oneof response {
        TaskColumnsList data = 1;
        ErrorResponse error = 2;
    }
}

message ListTaskColumnsRequest {
    uint32 project_id = 1;
}

message CreateTaskColumnRequest {
    string name = 1;
    uint32 limit = 2;
    uint32 order = 3;
    uint32 project_id = 4;
}

message UpdateTaskColumnRequest {
    uint32 id = 1;
    string name = 2;
    uint32 order = 3;
    uint32 limit = 4;
}

message DeleteTaskColumnRequest { uint32 id = 1; }

enum TaskStatus {
    PENDING = 0;
    OPEN = 1;
    WORK_IN_PROGRESS = 2;
    COMPLETED = 3;
}

enum TaskPriority {
    HIGH = 0;
    MEDIUM = 1;
    LOW = 2;
}

message AssignTaskRequest {
    uint32 task_id = 1;
    repeated string user_id = 2;
}

message RemoveAssigneeRequest {
    uint32 task_assignee_id = 1;
}